@@ -1,3 +1,9 @@
+Wed Oct 08 00:27:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	  - Added the Alias Chat dialog.
+
 Tue Oct 07 22:43:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
